--- a/css/web/main.css
+++ b/css/web/main.css
@@ -3,7 +3,10 @@
     --br-main-pink: #eb6ea5;
     --br-main-blue: #004ea2;
     --font-dark: #222;
+    --font-gray:#666;
     --font-white: whitesmoke;
+    --subfont-brown1:#7d7364;
+    --subfont-brown2:#524636;
     --bg-white: #fff;
     --bg-pink: #F5B6D2; 
     --box-shadow: rgba(80,80,80,.5);
@@ -27,34 +30,29 @@ main>div{
     width: 1200px;
 }
 .theme{margin: 80px 0;}
-.theme>h1{
-    font-family: 'Jua', sans-serif;
-    font-size: 32px;
-    line-height: 48px;
-    text-align: center;
-    margin-bottom: 50px;
-}
 .theme>ul{
     display: flex;
+    justify-content: space-between;
 }
 .theme>ul>li{
     overflow: hidden;
-    flex: 0 0 300px;
+    flex: 0 0 294px;
 }
 .theme>ul>li>a{
     position: relative;
     display: block;
 }
 .theme>ul>li>a>img{
-    width: 300px;
+    width: 294px;
+    height: 294px;
     vertical-align: top;
 }
-/* .theme>ul>li>a>img:nth-child(2){
+.theme>ul>li>a>img:nth-child(2){
     opacity: 0;
     transition: all .5s ease;
 }
 .theme>ul.themeList>li>a>img:nth-child(3){
-    bottom: 0; right: -30px;
+    bottom: -10px; right: -30px;
     transition: all .5s ease;
 }
 .theme>ul>li>a>img:not(:first-child){
@@ -62,17 +60,17 @@ main>div{
     right: 0; bottom: 0;
 }
 .theme>ul:nth-child(1)>li>a>img:last-child{
-    height: 200px;width: auto;
+    height: 250px;width: auto;
 }
 .theme>ul:nth-child(2)>li>a>img:last-child{
-    height: 180px;width: auto;
+    height: 250px;width: auto;
 }
 .theme>ul:nth-child(3)>li>a>img:last-child{
-    height: 220px;width: auto;
+    height: 300px;width: auto;
 }
 .theme>ul:nth-child(4)>li>a>img:last-child{
-    height: 200px;width: auto;
-} */
+    height: 300px;width: auto;
+}
 
 /* 이벤트 */
 .theme>ul>li:hover>a>img:nth-child(2){
@@ -85,16 +83,18 @@ main>div{
 
 
 
-/* 회사 뉴스 및 회사 정보 */
+/* BR EVENT */
 div.contents{
     position: relative;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     height: 682px;
 }
 div.contents h1{
-    font: 26px/64px 'Malgun gothic',sans-serif;
-    color: #004ba9;
+    font: 20px/40px 'Malgun gothic',sans-serif;
+    font-weight: bold;
+    color: var(--subfont-brown2);
 }
 div.contents b{
     width: 57px;height: 19px;
@@ -112,7 +112,7 @@ div.contents .news{
 div.contents>section.coNews{
     padding: 0 20px;
     flex: 0 0 347px; width: 347px;
-    border-top: 2px solid#004ba9;
+    border-top: 2px solid var(--bg-pink);
 }
 div.contents>section.coNews>h1{
     border-bottom: 1px solid #e1e1e1;
@@ -208,6 +208,7 @@ div.contents>section.coNews>div>div.ctrl>ul.paging>li.on{
     background: url(../../imgs/mainnews_indicator_on.png)no-repeat 50% 50%;
 }
 
+/* BR EVENT */
 div.contents>div.coInfo{
     display: flex;
     flex-wrap: wrap;
@@ -216,7 +217,7 @@ div.contents>div.coInfo{
 }
 div.contents>div.coInfo>section{
     flex: 0 1 auto; width: calc(50% - 10px);
-    border-top: 2px solid #004ba9;
+    border-top: 2px solid var(--bg-pink);
 }
 div.contents>div.coInfo>section:nth-child(1),
 div.contents>div.coInfo>section:nth-child(2){
@@ -240,7 +241,7 @@ div.contents>div.coInfo>section>a>div>h1{
 div.contents>div.coInfo>section>a>div>p.txt{
     font: 14px/22px "Malgun Gothic", sans-serif;
     letter-spacing: -1px;
-    color: #004ba9;
+    color: var(--subfont-brown1);
 }
 div.contents>div.coInfo>section>a>p.pic{
     margin-top: 35px;
@@ -259,7 +260,6 @@ section.etc>ul{
 }
 section.etc>ul>li{
     flex: 0 0 384px; 
-    border: 1px solid #ccc;
     width: 384px;
     height: 97px;
 }
@@ -268,6 +268,8 @@ section.etc>ul>li:nth-child(2){
 }
 section.etc>ul>li>a{
     display: flex; align-items: center;
+    border: 2px solid var(--bg-pink);
+    color: var(--subfont-brown1);
     height: 97px;
 }
 section.etc>ul>li>a>img:nth-child(1){
