--- a/css/web/main.css
+++ b/css/web/main.css
@@ -82,17 +82,16 @@ main>div{
 
 
 
-
 /* BR EVENT */
 div.contents{
     position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    height: 682px;
+    height: 850px;
 }
 div.contents h1{
-    font: 20px/40px 'Malgun gothic',sans-serif;
+    font: 22px/44px 'Malgun gothic',sans-serif;
     font-weight: bold;
     color: var(--subfont-brown2);
 }
@@ -106,114 +105,13 @@ div.contents b{
 div.contents .board{
 
 }
-div.contents .news{
-    border-color: #58b549; color: #58b549;
-}
-div.contents>section.coNews{
-    padding: 0 20px;
-    flex: 0 0 347px; width: 347px;
-    border-top: 2px solid var(--bg-pink);
-}
-div.contents>section.coNews>h1{
-    border-bottom: 1px solid #e1e1e1;
-}
-div.contents>section.coNews>dl{
-    margin-bottom: 25px;
-}
-div.contents>section.coNews>dl>dt{
-    margin-bottom: 27px;
-}
-div.contents>section.coNews>dl>dt>b{
-    display: block;
-    margin: 20px 0 16px 0;
-    font: 12px/19px "dotum",sans-serif;
-}
-div.contents>section.coNews>dl>dt>a{
-    display: block;
-    margin-bottom: 10px;
-    font: 18px/26px 'Malgun Gothic',sans-serif;
-    color: #222;
-}
-div.contents>section.coNews>dl>dt>time{
-    font: 14px/14px 'dotum',sans-serif;
-    color: #666
-}
-div.contents>section.coNews>dl>dd{
-    font: 14px/22px "dotum",sans-serif;
-    color: #333;
-}
-div.contents>section.coNews>div{
-
-}
-div.contents>section.coNews>div>div.banner{
-    overflow: hidden;
-}
-div.contents>section.coNews>div>div.banner>div.bannerList{
-    display: flex;
-    position: relative;
-    width: 300%;
-
-}
-div.contents>section.coNews>div>div.banner>div.bannerList>ul{
-    flex: 0 1 33.33333%; width: 33.333333%;
-    border-bottom: 1px solid #e1e1e1;
-}
-div.contents>section.coNews>div>div.banner>div.bannerList>ul>li{
-    display: flex; align-items: center;
-    height: 60px; border-top: 1px solid #e1e1e1;
-}
-div.contents>section.coNews>div>div.banner>div.bannerList>ul>li>b{
-    flex: 0 0 57px; width: 57px;
-}
-div.contents>section.coNews>div>div.banner>div.bannerList>ul>li>a{
-    flex: 0 1 auto;
-    display: block; padding: 0 20px 0 5px;
-    overflow: hidden;white-space: nowrap;
-    text-overflow: ellipsis;
-    font: 14px/60px 'Malgun Gothic',sans-serif;
-    color: #222;
-}
-div.contents>section.coNews>div>div.banner>div.bannerList>ul>li>time{
-    flex: 0 0 63px;
-    width: 63px;
-    font: 13px/13px 'Malgun Gothic',sans-serif;
-}
-div.contents>section.coNews>div>div.ctrl{
-    position: relative;
-    margin-top: 43px; height: 21px;
-}
-div.contents>section.coNews>div>div.ctrl>p.btnPrev{
-    position: absolute;
-    left: 0;top: 0;
-    width: 12px; height: 21px;
-    background: url(../../imgs/btn_main_news_left.png) no-repeat 0 0;
-}
-div.contents>section.coNews>div>div.ctrl>p.btnNext{
-    position: absolute;
-    right: 0;top: 0;
-    width: 12px; height: 21px;
-    background: url(../../imgs/btn_main_news_right.png) no-repeat 0 0;
-}
-div.contents>section.coNews>div>div.ctrl>ul.paging{
-    text-align: center;
-    height: 21px;
-}
-div.contents>section.coNews>div>div.ctrl>ul.paging>li{
-    vertical-align: middle;
-    display: inline-block;
-    width: 14px;height: 12px;
-    background: url(../../imgs/mainnews_indicator.png)no-repeat 50% 50%;
-}
-div.contents>section.coNews>div>div.ctrl>ul.paging>li.on{
-    background: url(../../imgs/mainnews_indicator_on.png)no-repeat 50% 50%;
-}
 
 /* BR EVENT */
 div.contents>div.coInfo{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    flex: 0 0 793px;
+    flex: 0 0 1;
 }
 div.contents>div.coInfo>section{
     flex: 0 1 auto; width: calc(50% - 10px);
