--- a/css/tablet/header.css
+++ b/css/tablet/header.css
@@ -193,17 +193,17 @@ header{
         flex-direction: column;
         text-align: center;
         width: 100%;
+        transition: all .5s ease-out;
     }
     header>div>nav.active>ul>li{
-        position: relative;
         float: left;
+        width: 100%;
         height: 52px;
         background-color: var(--br-main-pink);
         border-bottom: 2px solid var(--bg-white);
     }
     header>div>nav.active>ul>li>a{
         display: block;
-        padding-bottom: 12px;
         font-family: 'Nanum Gothic' sans-serif;
         font-weight: bold;
         font-size: 18px;
@@ -235,6 +235,8 @@ header{
 
     /* 이벤트 */
     header>div>nav.active>ul>li:hover{
+        display: flex;
+        flex-direction: column;
         background-color: var(--bg-white);
         border-bottom: 2px solid var(--br-main-pink);
     }
@@ -242,27 +244,34 @@ header{
         color: var(--br-main-pink);
     }
     header>div>nav.active>ul>li:hover>ul{
-        display: block;
-        left: -25px; top: 52px;
-        width: 185px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+    }
+    header>div>nav.active>ul>li:hover>ul>li{
+        z-index: 9999;
+        height: 30px;
+        border-bottom: 2px solid var(--bg-white);
         background-color:var(--bg-pink);
     }
-    header>div>nav.active>ul>li>ul>li:hover{
-        position: relative;
-        height: 43px;
-        border-bottom: 1px solid var(--bg-white);
-        background: var(--bg-white);
+    header>div>nav.active>ul>li:hover>ul>li>a{
+        color: var(--font-white);
+        font-weight: bold;
+        display: block;
+        margin-top: 8px;
+        font-size: 14px;
     }
-    header>div>nav.active>ul>li>ul>li.child:hover{
-        margin-right: 0;
+    header>div>nav.active>ul>li>ul>li:hover{
+        height: 30px;
+        border-bottom: 2px solid var(--bg-pink);
         background: var(--bg-white);
-        border-bottom-color:var(--bg-white);
     }
     header>div>nav.active>ul>li>ul>li:hover>a{
         color: var(--br-main-pink);
         font-weight: bold;
         display: block;
-        height: 43px;
+        margin-top: 8px;
         font-size: 14px;
     }
     
