--- a/css/mobile/header.css
+++ b/css/mobile/header.css
@@ -216,8 +216,7 @@ header>div.center>div#lang>dl{
     position: absolute;
     width: 44px; left: -1px; top: -1px;
     border-radius: 6px 6px 0 0;
-    border-bottom: 1px solid #a9b0b8;
-    bottom: 0 none;
+    border-bottom: 0 none;
 }
 header>div.center>div#lang>dl>dd:first-of-type{
     border-radius: 6px 6px 0 0;
